Cleanse irrelevant in redirects.yml

--- a/development/dev/plan/optimize/index.html.md.erb
+++ b/development/dev/plan/optimize/index.html.md.erb
@@ -31,7 +31,7 @@ As a general guideline, we try to plan each release in this way:
 - **Features**: 50%
 - **Maintenance**: 25%
 
-These targets will be [reviewed monthly](/handbook/cross-functional-prioritization/#cross-functional-dashboard-reviews) after each release during the [retrospective](https://gitlab.com/gl-retrospectives/manage-stage/optimize/-/issues).
+These targets will be [reviewed monthly](/handbook/product/product-processes/) after each release during the [retrospective](https://gitlab.com/gl-retrospectives/manage-stage/optimize/-/issues).
 
 #### Organizing the work
 
