Cleanse irrelevant in redirects.yml

--- a/infrastructure/production/index.html.md.erb
+++ b/infrastructure/production/index.html.md.erb
@@ -128,7 +128,7 @@ Events are recorded separately for the staging and production environment.
 
 For some incidents, we may figure out that the usage patterns that led to the issues were abuse.  There is a process for how we define and handle abuse.
 
-1. The definition of abuse can be found on the [security abuse operations section of the handbook]( ../../security/#abuse-operations)
+1. The definition of abuse can be found on the [security abuse operations section of the handbook](/handbook/security/)
 1. In the event of an incident affecting GitLab.com availability, the SRE team may take actions immediately to keep the system available.  However, the team must also immediately involve our security abuse team.  A new [security on call rotation](/handbook/security/security-operations/sirt/engaging-security-on-call.html) has been established in PagerDuty - There is a Security Responder rotation which can be alerted along with a Security Manager rotation.
 
 ## Backups
