Replace ally reference with GitLab on Plan stage page

--- a/development/dev/plan/index.html.md.erb
+++ b/development/dev/plan/index.html.md.erb
@@ -159,12 +159,11 @@ We feel it is important to document and communicate, that changing of any item's
 
 #### Active Quarter OKRs
 
-<iframe src="https://app.ally.io/public/OTGwoMp4FcvXrAZ" class="dashboard-embed" height="700" width="100%" style="border:none;"> </iframe>
+As we migrate to using GitLab to track OKRs, the active quarter (FY24-Q1) Objectives will be visible [here](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=created_date&state=opened&type%5B%5D=objective&label_name%5B%5D=devops%3A%3Aplan&label_name%5B%5D=division%3A%3AEngineering&milestone_title=FY24-Q1&first_page_size=100) and Key Results [here](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=created_date&state=opened&label_name%5B%5D=division%3A%3AEngineering&label_name%5B%5D=devops%3A%3Aplan&milestone_title=Q4&type%5B%5D=key_result&first_page_size=100).
 
 #### Previous Quarter OKRs
 
-<iframe src="https://app.ally.io/public/mQqQXDnbeoZ9KiC" class="dashboard-embed" height="180" width="100%" style="border:none;"></iframe>
-
+FY23-Q4 OKRs were conducted in Ally.io and are no-longer available.
 
 ### Retrospectives
 
