--- a/quality/quality-engineering/test-coverage/index.html.md.erb
+++ b/quality/quality-engineering/test-coverage/index.html.md.erb
@@ -22,7 +22,7 @@ than specific ports which allow our test access to the test instance.
 
 This is triggered on the [Nightly build](https://gitlab.com/gitlab-org/quality/pipeline-common/-/blob/master/ci/nightly/qa.gitlab-ci.yml#L181),
 where [smoke tests](https://docs.gitlab.com/ee/development/testing_guide/smoke.html) for CE and EE are executed. Results of the Nightly pipeline
-can be found in the generated [Allure report](https://storage.googleapis.com/gitlab-qa-allure-reports/nightly/master/index.html),
+can be found in the generated [Allure report](https://gitlab-qa-allure-reports.s3.amazonaws.com/nightly/master/index.html),
 where test states such as failures can be filtered on.
 Nightly pipelines are visible at the
 [Nightly Pipelines](https://gitlab.com/gitlab-org/quality/nightly/-/pipelines?page=1&scope=all&username=gitlab-bot) page (internal only).
@@ -54,12 +54,12 @@ verifies upgrade from the `latest` GitLab docker image to `nightly` ([scenario c
 ##### Test run schedule
 
 1. `Test::Omnibus::UpdateFromPrevious` scenario is run with `package-and-test` job which executes from a [scheduled pipeline every 2 hours](https://gitlab.com/gitlab-org/gitlab/pipeline_schedules) against GitLab `master`.
-Results of the `package-and-test` job can be found in [Allure report](https://storage.googleapis.com/gitlab-qa-allure-reports/e2e-package-and-test/master/index.html),
+Results of the `package-and-test` job can be found in [Allure report](https://gitlab-qa-allure-reports.s3.amazonaws.com/e2e-package-and-test/master/index.html),
 where test states such as failures can be filtered on.
   - `package-and-test` jobs can be found on [GitLab `master` scheduled pipelines](https://gitlab.com/gitlab-org/gitlab/-/pipelines?page=1&scope=all&username=gitlab-bot&source=schedule) page (internal only).
 The upgrade test job names are `ee:update-major` and `ee:update-minor`.
 1. `Test::Omnibus::Upgrade` and `Test::Omnibus::Update` scenarios are run in the [Nightly Pipelines](https://gitlab.com/gitlab-org/quality/nightly/-/pipelines?page=1&scope=all&username=gitlab-bot).
-Results of the Nightly pipeline can be found in [Allure report](https://storage.googleapis.com/gitlab-qa-allure-reports/nightly/master/index.html),
+Results of the Nightly pipeline can be found in [Allure report](https://gitlab-qa-allure-reports.s3.amazonaws.com/nightly/master/index.html),
 where test states such as failures can be filtered on.
   - Scenario job names are `ce:upgrade` and `ce:update`/`ee:update`.
 
