Update 2023 Infra GC dates.

--- a/infrastructure/index.html.md.erb
+++ b/infrastructure/index.html.md.erb
@@ -175,14 +175,17 @@ Quick checklist for the host (time order):
 5. 20 minutes before - open up Zoom and check for any updates.
 
 |**GC Date**|**DRI**|
-|April 6|Amy P|
-|May 18|Dave S|
-|July 5|Kenn W|
-|August 11|Anna Liisa M|
-|September 22|Rachel N|
-|November 8|Liam M|
-|December 20|Michele B|
-|TBD|Anthony F|
+|Feb 1, 2023| Anthony F|
+|Mar 14, 2023| Amy P|
+|Apr 26, 2023| Dave C |
+|June 8, 2023| Dave S|
+|July 25, 2023| Stephen D |
+|August 29, 2023| Kenn W |
+|October 12, 2023| Oriol L |
+|November 16, 2023| Anna Liisa M|
+|TBD| Rachel N|
+|TBD| Liam M |
+|TBD| Michele B |
 
 ##### GitLab SaaS Infrastructure
 
