Add OKRs section to Geo team page

--- a/development/enablement/systems/geo/index.html.md.erb
+++ b/development/enablement/systems/geo/index.html.md.erb
@@ -35,6 +35,12 @@ customers and some rely on Geo as a critical part of their workflow.
 We also work constantly to keep housekeeping chores to a manageable level. Where possible, we address these issues
 as part of a related project. Where this is not possible, we use time around our projects to make this happen.
 
+## Objectives and Key Results (OKRs)
+
+Every quarter the engineering team sets [objectives and key results](https://about.gitlab.com/company/okrs/#what-are-okrs). OKRs are managed in GitLab as of FY24-Q1. The following are links to issues lists for Geo's OKRs.
+
+[OKRs FY24-Q1](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Ageo&milestone_title=FY24-Q1&first_page_size=100)
+
 ## Geo's Relationship to Disaster Recovery
 
 Disaster Recovery (DR) is a set of policies, tools and procedures put in place to be able to recover from a disaster.
