Add Foundations page and team description

--- a/infrastructure/team/reliability/index.html.md.erb
+++ b/infrastructure/team/reliability/index.html.md.erb
@@ -79,15 +79,9 @@ The General Team supports the Reliability Team's [overall vision](/handbook/engi
     * [Thanos Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?sort=updated_desc&state=opened&label_name%5B%5D=Service%3A%3AThanos&first_page_size=100)
     * [Elastic Search Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3AElasticsearch)
 
-##### Reliability Foundations Squad
-  * Build, maintain, and improve core infrastructure services.
-  * Assist customers with infrastructure related application support.
-  * Services and Tools: [GKE / K8s Workloads](https://gitlab.com/gitlab-com/gl-infra/k8s-workloads), Chef, Terraform, Vault, Edge Services (Load Balancing, DNS, CDN)
-  * Examples:
-    * [Sev1/2 Corrective Actions](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/3164592?label_name%5B%5D=corrective%20action)
-    * [OS Upgrades](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/15029)
-    * [Security Patching](https://gitlab.com/gitlab-com/gl-infra/production/-/issues/6605)
-    * [General Requests from the backlog](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/592) that DO NOT require a dedicated project squad.
+##### Reliability Foundations Team
+  * Build, Run and Own the core infrastructure for GitLab.com.
+  * See the [Foundations Team page](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/foundations.html) for more information
      
 ##### Database Reliability Squad
 This squad is comprised of DBREs and one or two SREs to support their learning to implement DB related infra changes.
