Add product design manager as Informed part of feature renaming

--- a/product/gitlab-the-product/index.html.md.erb
+++ b/product/gitlab-the-product/index.html.md.erb
@@ -233,7 +233,7 @@ Some valid but not exclusive reasons are:
 - Reducing confusion as we introduce new adjacent features
 - Reducing confusion as we re-factor existing features
 
-When renaming features follow the process [to rename a category](/handbook/product/categories/#changing-category-name) starting with an MR to change the name in [`data/features.yml`](https://gitlab.com/gitlab-com/www-gitlab-com/blob/master/data/features.yml). Request review by the Product Director and Engineering Director of your Section for approval. Optionally, add a comment including your technical writer, engineering manager, and designer for transparency.
+When renaming features follow the process [to rename a category](/handbook/product/categories/#changing-category-name) starting with an MR to change the name in [`data/features.yml`](https://gitlab.com/gitlab-com/www-gitlab-com/blob/master/data/features.yml). Request review by the Product Director and Engineering Director of your Section for approval. Optionally, add a comment including your technical writer, engineering manager, product design manager, and product designer for transparency.
 
 When renaming a feature other items to consider are updates to documentation, blogs, direction pages and competitive information.
 
