Adding in Q4 OKR and remove reference to allyio

--- a/quality/contributor-success/index.html.md.erb
+++ b/quality/contributor-success/index.html.md.erb
@@ -125,16 +125,30 @@ All issues that relate to the inner working of the company GitLab, including spe
 
 ## OKRs
 
-Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and
+Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below links to our current and
 previous quarter OKRs, it updates automatically as the quarter progresses.
+
+Note: Due to the switch to GitLab's OKR system, we no longer have the ability to view the OKRs from FY23Q4. A hard-copy was made of the state of these OKRs as of 2023-01-30.
 
 ### Current quarter
 
-<iframe src="https://app.ally.io/public/TQRmKHpOC7NoZb7" class="dashboard-embed" height="1600" width="100%" style="border:none;"> </iframe>
+[Contributor Success FY24 Q1 OKR Overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122364731)
 
-### Previous quarter
+### Previous quarter (FY23Q4)
 
-<iframe src="https://app.ally.io/public/e0izWt13OqmGHuO" class="dashboard-embed" height="1600" width="100%" style="border:none;"> </iframe>
+- Obj: Scale the Community through a contributor event, mentoring & onboarding of customers, 83%
+  - KR: 30 MR creation-to-review sessions. 53%
+  - KR: Onboard 15 Leading Organizations with a contribution workshop, 73%
+  - KR: Organize GitLab Contribution Days, 88%
+  - KR: Increase monthly unique to 140, 70%
+- Obj: Increase Contribution Value by increasing collaboration and increasing recognition, 89%
+  - KR: Recognize all GitLab team members weekly, 92%
+  - KR: Recognize community reviewers monthly, 75%
+  - KR: Get 12 MRs reviewed by the wider community, 100%
+- Obj: Grow & Bootstrap the team through an improved hiring process & talent assessment, 100%
+  - KR: Execute Talent assessment with all team members. 100%
+  - KR: All team members to complete the Best-In-Class training, 100%
+  - KR: Hire 1 Person, 100%
 
 ## Performance Indicators
 
