Restructure contributor success handbook page so workflows & dashboards are more easily discovered

--- a/quality/contributor-success/index.html.md.erb
+++ b/quality/contributor-success/index.html.md.erb
@@ -13,9 +13,18 @@ description: "Contributor Success Team"
 
 | **GitLab Team Handle** | [`@gitlab-org/quality/contributor-success`](https://gitlab.com/gitlab-org/quality/contributor-success) |
 | **Slack Channel** | [`#g_contributor_success`](https://gitlab.slack.com/archives/C02R0NE6P6C)
-| **Slack Channels from initiatives that we help drive**| [`#i_user_engagement_contributor_growth`](https://gitlab.slack.com/archives/C0223D98HHC), [`#leading_organizations`](https://gitlab.slack.com/archives/C03KC7N184D)  |
+| **Slack Channels from initiatives that we help drive**| [`#leading_organizations`](https://gitlab.slack.com/archives/C03KC7N184D)  |
 | **Team Boards** | [`gitlab-org/-/boards/4296693`](https://gitlab.com/groups/gitlab-org/-/boards/4296693) |
 | **Issue Tracker** | [`gitlab-org/quality/contributor-success/team`](https://gitlab.com/gitlab-org/quality/contributor-success/team/-/issues) |
+
+- - -
+
+## Sub-pages
+
+| **Workflows** | [Contributor Success Workflows](/handbook/engineering/quality/contributor-success/community-contributors-workflows.html) |
+| **Metrics** | [Contributor metrics & dashboards](/handbook/engineering/quality/contributor-success/metrics.html) |
+| **Contributing Organization Tracking** | [Contributing Organization Tracking](/handbook/engineering/quality/contributor-success/contributing-org-tracker.html) |
+| **A Contributor's User Journey** | [User Journey](/handbook/engineering/quality/contributor-success/user-journey.html) |
 
 - - -
 
@@ -82,8 +91,8 @@ organizations who are among our most active contributors. A company or individua
 [qualifies](/handbook/marketing/community-relations/leading-organizations/#qualification) for unique benefits by
 reaching 20 merged merge requests or more over a trailing three full calendar month basis.
 
-Please see [Contributing Orgs tracker](contributing-org-tracker.html) for details how to onboard or offboard a Leading
-Organizations from our PI's, SLO's & Dashboards.
+See our workflows on [how to add or remove an organization](/handbook/engineering/quality/contributor-success/community-contributors-workflows.html#leading-organizations)
+to the program.
 
 ## Team Responsibilities
 
@@ -204,11 +213,7 @@ account from being linked to a customer account, and being counted into the MRAR
   - Encourage features at Community relations hackathons.
   - Published list of feature issues with Marketing team.
 
-### User Journey
-
-[User Journey](./user-journey.html)
-
-### GitLab Community Teams Structure
+### How do we collaborate with other teams?
 
 There are several teams across various reporting structures that work on making the GitLab Community great.
 
@@ -238,118 +243,6 @@ graph TD
     
 ```
 
-## Sisense Dashboards & Snippets
-
-### Dashboards we use
-
-- [Contributor Success Performance Indicators](https://app.periscopedata.com/app/gitlab/729542/Contributor-Success-PIs)
-   - Unique Wider Community Contributors per Month
-   - Amount of MRs created, merged & closed
-   - Time between MR created and merged (OCMA)
-   - Time between MR ready for review & reviewed
-- [Leading Organizations Performance Indicators](https://app.periscopedata.com/app/gitlab/1064389/Leading-Organizations-PIs)
-   - Time to review SLO
-   - Open MRs from Leading Organizations & their age
-- [MRARR Dashboard](https://app.periscopedata.com/app/gitlab:safe-intermediate-dashboard/965062/MRARR-Dashboard)
-   - Customers ARR * Number of MRs
-   - Shows how we are doing towards the target
-- [MRARR Diagnostics](https://app.periscopedata.com/app/gitlab:safe-intermediate-dashboard/965418/MRARR-Diagnostics)
-   - Identifies MRs from customers that are not being tracked yet
-   - Identifies projects with contributions that are not being tracked yet
-   - See [Contributing Orgs tracker](contributing-org-tracker.html) for details   
-
-### Snippets
-
-See [Sisense SQL snippets](sisense-sql-snippets.html)
-
-## Working with community contributions
-
-### Community contribution labels
-
-- The `Community contribution` label is automatically applied by the [GitLab Bot](https://gitlab.com/gitlab-bot) to MRs submitted by wider community members. 
-  * You can see the list of MRs in [`gitLab-org` list of merge requests](https://gitlab.com/groups/gitlab-org/-/merge_requests?label_name[]=Community+contribution).
-  * [Learn more about the cadence and conditions for this automation](/handbook/engineering/quality/triage-operations/#community-contributions).
-- The `1st contribution` label is added to first-time contributions. Every time a contributor is opening a merge request under the `gitlab-org` namespace for the first time, the label `1st contribution` is automatically applied to the merge request.
-  - You can see the list of MRs in [`gitlab-org` list of merge requests](https://gitlab.com/groups/gitlab-org/-/merge_requests?label_name%5B%5D=1st+contribution).
-  - [First-time contributors](/handbook/marketing/community-relations/code-contributor-program/#first-time-contributors) are also awarded a gift as our way to say thanks.
-
-### Granting additional CI minutes to a contributor
-
-You can use [ChatOps](https://docs.gitlab.com/ee/development/chatops_on_gitlabcom.html) commands to grant extra CI minutes to a community contributor.
-
-- Investigate the account:
-
-  ```
-  /chatops run namespace find USERNAME
-  ```
-
-- Adjust the _extra minutes_ for the account.
-  These extra minutes go on top of their [base amount](https://docs.gitlab.com/ee/ci/pipelines/cicd_minutes.html#cost-factor-for-community-contributions-to-gitlab-projects) of minutes.
-
-  ```
-  /chatops run namespace minutes USERNAME 1000
-  ```
-
-  There is only one contingent of extra minutes per account.
-  If you execute the above command twice, the account still has only 1000 extra minutes because you set the amount of extra minutes to 1000 twice.
-
-- Track the added extra minutes.
-  These extra minutes apply automatically every month until manually canceled, and will be audited regularly.
-
-### Community merge request workflow automations
-
-Community merge requests are MRs opened by a person that's not present on https://about.gitlab.com/company/team/ (excluding any bot and service account users).
-
-#### Triage reports
-
-See [Community-related triage reports](/handbook/engineering/quality/triage-operations/#community-related-triage-reports).
-
-#### Scheduled workflow automation
-
-See [Community-related scheduled workflow automation](/handbook/engineering/quality/triage-operations/#community-related-scheduled-workflow-automation).
-
-#### Reactive workflow automation
-
-See [Community-related reactive workflow automation](/handbook/engineering/quality/triage-operations/#community-related-reactive-workflow-automation).
-
-### Merge request coaches
-
-[Merge request coaches](/job-families/expert/merge-request-coach/) are available to help contributors with their MRs. This includes: 
-- Identifying reviewers for the MR.
-- Answering questions from contributors.
-- Educating contributors on the [contribution acceptance criteria](https://docs.gitlab.com/ee/development/contributing/merge_request_workflow.html#contribution-acceptance-criteria).
-- Or completing the MR if the contributor is unresponsive or unable to complete.
-  - In that case, the `coach will finish` label will be added to the MR and the coach will either directly push new commits to the MR, or re-create a new MR with the original changes. 
-  - Contributors can mention the coaches in their MRs by typing `@gitlab-org/coaches`.
-
-The list of current merge request coaches can be found in the [team page](/company/team/) by selecting `Merge Request
-Coach` in the department filter.
-
-There is also the [`#mr-coaching`](https://gitlab.slack.com/archives/C2T9APP9C) channel in GitLab Slack if GitLab team
-members have any questions related to community contributions.
-
-More information on merge request coaches (including how to become a merge request coach) can be found in the 
-[MR coach lifecycle page](/handbook/marketing/community-relations/code-contributor-program/resources/merge-request-coach-lifecycle.html).
-
-### Creating educational materials
-
-1. [Gitpod with GDK - Introduction (video)](https://www.youtube.com/watch?v=OzgGP5tT4bo)
-1. [Gitpod with GDK - Setup  (video)](https://www.youtube.com/watch?v=6VNm36wdXnI)
-
-### DCO and CLA Guidance
-
-All external contributions to GitLab are subject to the [GitLab DCO or CLA](/community/contribute/dco-cla/), depending
-on where the contribution is made and on whose behalf.
-
-Instructions for corporate contributors to enter into an overarching Corporate CLA covering all contributions made on
-their behalf are set out on the [DCO-CLA page](/community/contribute/dco-cla/#need-a-corporate-cla-covering-all-contributors-on-behalf-of-your-organization). 
-
-## Recognizing contributors 
-
-We work with the Community Relations team, to [recognize contributors](/handbook/marketing/community-relations/code-contributor-program/#recognition-for-contributors) 
-
-A nomination process is also available to [nominate a contributor](/handbook/marketing/community-relations/code-contributor-program/community-appreciation/)
-
 ## Contributor Growth stand-up
 
 The purpose of this stand-up is to collaborate cross-functionally between various teams and GitLab team members on
@@ -358,15 +251,3 @@ initiative: [https://gitlab.com/groups/gitlab-com-top-initiatives/-/epics/8](htt
 
 - Agenda - <https://docs.google.com/document/d/11S48qIoFzKxZAdMznlUm5-Pob4EEBb8DNv2YIBLw9uw/edit>
 - Legacy Agenda - <https://docs.google.com/document/d/1AOgqaslnq-WI1ICSZ1NzSnALf1Va4D5qAD191icAoSI/edit#>
-
-## Code Contributor User Journey
-
-The code contributor user journey is documented in the handbook - [User Journey](./user-journey.html)
-
-## Child-pages
-
-### [Contributing Orgs tracker](contributing-org-tracker.html)
-
-### [Sisense SQL snippets](sisense-sql-snippets.html)
-
-### [User Journey](user-journey.html)
