--- a/infrastructure/team/reliability/database-reliability.html.md.erb
+++ b/infrastructure/team/reliability/database-reliability.html.md.erb
@@ -1,4 +1,13 @@
+---
+layout: handbook-page-toc
+title: "Reliability:Database Reliability Team"
+---
+
+## On this page
+{:.no_toc .hidden-md .hidden-lg}
+
 ## Mission
+
 The Database Reliability team at GitLab mission is to Build, Run and Own the entire lifecycle of the PostgreSQL database engine for GitLab.com.
 
 The team is focused on owning the reliability, scalability, performance & security of the database engine and it's supporting services.
@@ -11,10 +20,10 @@ The team does not explicitly have any self hosted product responsibilities but w
 
 ## Vision
 
-
 ## Ownership
 
 ### Services
+
 Systems and services we are primarily responsible for:
   * PostgreSQL Core
   * PostgreSQL High Availability and Load Balancing (e.g. Patroni, PGBouncer, consul, PostgreSQL Replication etc.)
@@ -23,6 +32,7 @@ Systems and services we are primarily responsible for:
   * Support & troubleshooting of GitLab applications, specifically related to their use of and interaction with the PostgreSQL ecosystem.
 
 Systems or services explicitly not owned by us:
+
 | System name | Description | Owner and supported by | Extra info/Open questions |
 |-------------|-------------|------------------------|---------------------------|
 | Redis | There are several use cases such as caching, rate-limiting, sidekiq queueing. | [Scalability Group](https://about.gitlab.com/handbook/engineering/infrastructure/team/scalability/) | [Redis Architecture](https://about.gitlab.com/handbook/engineering/infrastructure/production/architecture/#redis-architecture) |
@@ -31,19 +41,23 @@ Systems or services explicitly not owned by us:
 | Self Managed databases|           | Self managed Support |               |
 
 ## Performance Indicators
+
 The signals we use to know that we are achieving our mission:
   * Related quarterly OKRs (TBC)
   * Relavent [performance and availability indicators](https://about.gitlab.com/job-families/engineering/infrastructure/database-reliability-engineer/#performance-indicators)
 
 ## Team Members
+
 TBD
 
 ## Key Technical Skills
+
 The team is comprised of DBREs with varying levels of expertise in:
   * Supporting PostgreSQL in large production environments.
   * Infrastucture automation and configuration management, using tools such as Chef, Ansible, Terraform, etc.
   * PostgreSQL internals, tuning & optimization, SQL and PL/pgSQL.
 
 ## Common Links
-* Team backlog: https://gitlab.com/gitlab-com/gl-infra/reliability/-/milestones/95#tab-issues 
-* Slack channel: [#db_squad](https://gitlab.slack.com/archives/C02K0JTKAHJ) 
+
+* Team backlog: https://gitlab.com/gitlab-com/gl-infra/reliability/-/milestones/95#tab-issues
+* Slack channel: [#db_squad](https://gitlab.slack.com/archives/C02K0JTKAHJ)
