--- a/infrastructure/team/reliability/general.html.md.erb
+++ b/infrastructure/team/reliability/general.html.md.erb
@@ -1,17 +1,14 @@
 ---
 layout: handbook-page-toc
-title: "Reliability Engineering"
+title: "Reliability:General Team"
 ---
 
 ## On this page
 {:.no_toc .hidden-md .hidden-lg}
 
-- TOC
-{:toc .hidden-md .hidden-lg}
-
 ## Mission
 
-The General Team supports the Reliability Team's [overall vision](/handbook/engineering/infrastructure/team/reliability/#vision) by supporting services for GitLab.com that do not fit the mission of the other [Reliability Teams](/handbook/engineering/infrastructure/team/reliability/#reliability-teams). See the [dedicated General Team Page](/handbook/engineering/infrastructure/team/reliability/general.html) for more details.   
+The General Team supports the Reliability Team's [overall vision](/handbook/engineering/infrastructure/team/reliability/#vision) by supporting services for GitLab.com that do not fit the mission of the other [Reliability Teams](/handbook/engineering/infrastructure/team/reliability/#reliability-teams). See the [dedicated General Team Page](/handbook/engineering/infrastructure/team/reliability/general.html) for more details.
 
 ## Vision
 
@@ -49,7 +46,7 @@ It is not always easy or possible to definitively determine the primary services
      * Success Criteria: Meets or exceeds current [Reliability SLO](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/issues.html#service-level-agreements)
  * Customer Satisfaction
     * Success Criteria: TBD
- 
+
 ## Team Members
 
 TBD
@@ -60,12 +57,10 @@ The General Team must maintain a broad and diverse set of technical skills while
  * Software engineering - Proficiency in one or more programming languages and experience with software development methodologies.
 
  * Systems administration - Knowledge of operating systems and experience with tasks such as installing and configuring software, managing users and permissions, and setting up and maintaining network services.
- 
+
  * Network and Application Security and Compliance - Understanding of network security concepts and experience penetration testing and vulnerability assessment.
- 
 
 ## Common Links
 
- * Issue Board: [All issue by priority](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/3993753?label_name%5B%5D=Squad%3A%3AGeneral) 
+ * Issue Board: [All issue by priority](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/3993753?label_name%5B%5D=Squad%3A%3AGeneral)
  * Slack Channel: #reliability-general-squad
- 
