--- a/infrastructure/team/reliability/practices.html.md.erb
+++ b/infrastructure/team/reliability/practices.html.md.erb
@@ -1,13 +1,10 @@
 ---
 layout: handbook-page-toc
-title: Reliability:Practices Team
+title: "Reliability:Practices Team"
 ---
 
 ## On this page
 {:.no_toc .hidden-md .hidden-lg}
-
-- TOC
-{:toc .hidden-md .hidden-lg}
 
 ## Mission
 
@@ -33,46 +30,45 @@ Requests not in the scope below should refer to Reliability team's defined [Gene
  * Support Service related incidents on Incident RCAs, SLI/SLO iteration, Corrective Actions
  * Develop standards, best practices and technical documentation for reliabile services
  * Technical knowledge sharing and documentation through runbooks, design documents etc
- * Work with stage groups to increase service maturity as per the defined [Service Maturity Model](https://about.gitlab.com/handbook/engineering/infrastructure/service-maturity-model/) 
+ * Work with stage groups to increase service maturity as per the defined [Service Maturity Model](https://about.gitlab.com/handbook/engineering/infrastructure/service-maturity-model/)
  * Examples:
    - [CustomerDot migration from Azure to GCP](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/626)
    - [Gitaly Cgroups](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/344)
    - [CI Decomposition](https://gitlab.com/groups/gitlab-org/-/epics/6160)
 
-
 ### Caveats
-The Practices team is not there to reduce the stage team's backlog but to collaborate and support reliability efforts and infrastructure best practices. 
+The Practices team is not there to reduce the stage team's backlog but to collaborate and support reliability efforts and infrastructure best practices.
 
-The above scope of work might imply some overlap with other teams' functions such as; 
+The above scope of work might imply some overlap with other teams' functions such as;
   - Capacity planning owned by [Scalability team](https://about.gitlab.com/handbook/engineering/infrastructure/team/scalability/)
   - Observability and Monitoring owned by Reliability:Observability
-  - Incident Management owned by overall Reliability team. Currently, in cases of overlaps and doubts, follow the [General Workflow](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/#how-we-work--general-workflow) or check-in with the respective Reliability, Engineering manager. 
-  
+  - Incident Management owned by overall Reliability team. Currently, in cases of overlaps and doubts, follow the [General Workflow](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/#how-we-work--general-workflow) or check-in with the respective Reliability, Engineering manager.
+
 ## OKRs
 
 We use quarterly [Objectives and Key Results](https://about.gitlab.com/company/okrs/) to plan and measure our Key Performance Indicators (KPIs).
 
 ## Performance indicators
 
-We measure the value we contribute by using [performance indicator metrics](https://about.gitlab.com/handbook/engineering/infrastructure/performance-indicators/#key-performance-indicators). 
+We measure the value we contribute by using [performance indicator metrics](https://about.gitlab.com/handbook/engineering/infrastructure/performance-indicators/#key-performance-indicators).
 
 In addition to the Infrastructure Department's KPIs for [availability](/handbook/engineering/infrastructure/performance-indicators/#gitlabcom-availability)
 and [performance](/handbook/engineering/infrastructure/performance-indicators/#gitlab-com-performance) of GitLab.com, the Practices team tracks the following;
  - Service's Pager load
  - Improvements of service SLOs
- - Introduction of better SLIs for services to define customer happiness 
+ - Introduction of better SLIs for services to define customer happiness
  - Improve the [Service Maturity level](https://about.gitlab.com/handbook/engineering/infrastructure/service-maturity-model/).
 
-The Practices team does not necessarily own the above KPIs and metrics but rather facilitate and support them to ensure reliable services and components. 
+The Practices team does not necessarily own the above KPIs and metrics but rather facilitate and support them to ensure reliable services and components.
 
 ## Technical skills
- - The technical skill required for Practices team is as defined in our [Engineering Infrastructure roles](https://about.gitlab.com/job-families/engineering/infrastructure/) for [Site Reliability Engineer](https://about.gitlab.com/job-families/engineering/infrastructure/site-reliability-engineer/) 
+ - The technical skill required for Practices team is as defined in our [Engineering Infrastructure roles](https://about.gitlab.com/job-families/engineering/infrastructure/) for [Site Reliability Engineer](https://about.gitlab.com/job-families/engineering/infrastructure/site-reliability-engineer/)
  - Able to contribute upstream to the respective product/stage group.
  - Strong knowledge of SLI/SLO in general and how they work at GitLab.
 
 ## Dashboards and common links
   - Team dashboards
- 
+
 ### Project work VS Operations Work
 
 We strive for a 50% split between project work (`~work::project`) and operations work (~work::incident + ~work::general).
@@ -136,7 +132,6 @@ Participants:
   <% end %>
 <% end %>
 
-
 ## Best practices
 
 ### Pairing with Stage Group
@@ -147,7 +142,7 @@ It is encouraged to perform pairings between the Practices team members and thei
  - It allows to easily identify and discuss opportunities for improvement in the
   product.
 
-Both the Practices team member and their assigned Stage Group team members are encouraged to reach out to the respective counterpart to ask whether they have room to work on a specific issue together. 
+Both the Practices team member and their assigned Stage Group team members are encouraged to reach out to the respective counterpart to ask whether they have room to work on a specific issue together.
 Any identified improvements should be documented by creating issues or creating merge requests.
 
 ### Stage Group Weekly meetings
@@ -171,7 +166,6 @@ Issues for Practices team can be found in the following projects:
 | Retrospective (weekly) | Discuss what went well, not so well and opportunities for improvements. |
 | Roadmap (monthly) | Discuss the vision and roadmap check-in |
 
-
 ### Standups
 
 #### Async Daily Standups
@@ -182,16 +176,15 @@ We use [geekbot](https://geekbot.com/) integrated with Slack.
 
 #### Async Issue Updates
 
-The purpose of daily updates is to inspect progress and adapt upcoming planned work as necessary. 
+The purpose of daily updates is to inspect progress and adapt upcoming planned work as necessary.
 In an all-remote culture, we keep the updates asynchronous and put them directly in the issues.
 
-The async daily update communicates the progress and confidence using an issue comment. 
+The async daily update communicates the progress and confidence using an issue comment.
 A daily update may be skipped if there was no progress.
-
 
 #### Epic weekly updates
 
-A weekly async update should be added to epics related to quarter goals and to epics actively being worked on as per the format in [Project Epic template](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/projects.html#project-epic-template) 
+A weekly async update should be added to epics related to quarter goals and to epics actively being worked on as per the format in [Project Epic template](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/projects.html#project-epic-template)
 The update should provide an overview of the progress across the work in progress. Consider adding an update if epic is blocked, if there are competing priorities, and even when not in progress.
 
 ### Roadmap
