Update on-call rotation schedule for QE incident management

--- a/quality/quality-engineering/oncall-rotation/index.html.md.erb
+++ b/quality/quality-engineering/oncall-rotation/index.html.md.erb
@@ -89,15 +89,10 @@ In the current iteration, incident management activities happen during each team
 - Everyone in the Quality Engineering Sub-Department should support the on-call DRI and be available to jump on a Zoom call or offer help if needed.
 
 ### Schedule
-August 2022 - December 2022
+January 2023 - April 2023
 
 | **Start Date** | **DRI**           |
 |----------------|-------------------|
-| 2022-11-28     | Kassandra Svoboda |
-| 2022-12-05     | Vincy Wilson      |
-| 2022-12-12     | Joanna Shih       |
-| 2022-12-19     | Ramya Authappan   |
-| 2022-12-26     | Ramya Authappan   |
 | 2023-01-02     | Chloe Liu         |
 | 2023-01-09     | Kassandra Svoboda |
 | 2023-01-16     | Vincy Wilson      |
@@ -106,12 +101,12 @@ August 2022 - December 2022
 | 2023-02-06     | Chloe Liu         |
 | 2023-02-13     | Kassandra Svoboda |
 | 2023-02-20     | Vincy Wilson      |
-| 2023-02-27     | Joanna Shih       |
+| 2023-02-27     | Sofia Vistas      |
 | 2023-03-06     | Ramya Authappan   |
 | 2023-03-13     | Chloe Liu         |
 | 2023-03-20     | Kassandra Svoboda |
 | 2023-03-27     | Vincy Wilson      |
-| 2023-04-03     | Joanna Shih       |
+| 2023-04-03     | Sofia Vistas      |
 | 2023-04-10     | Ramya Authappan   |
 | 2023-04-17     | Chloe Liu         |
 | 2023-04-24     | Kassandra Svoboda |
