Add detail to Data OKR structure to include roll-up bullets and business impact

--- a/business-technology/data-team/how-we-work/index.html.md.erb
+++ b/business-technology/data-team/how-we-work/index.html.md.erb
@@ -119,6 +119,8 @@ Process:
     1. **Achieved:** [Bulleted list of what has been completed]
     1. **Features Included in Next Release:** [Bulleted list of what is scheduled to be completed in the next release]
     1. **Blockers:**  [Details of any blockers (technical, business, other)]
+    1. **Overall Estimated Size:**  [T-Shirt Size Estimate]
+    1. **Business Impact Statement:** [Short summary of business impact]
     <!-- Status End -->
     ```
 4. During milestone planning, the DRI will be responsible for updating the above details for the KR in the Epic. The best practice is to write the update for the entire milestone.
