--- a/metrics/index.html.md.erb
+++ b/metrics/index.html.md.erb
@@ -148,8 +148,8 @@ The Engineering Analytics team reserves the urgency for these dashboards to prov
 Merge Request (MR) Rate is a measure of productivity and efficiency. The numerator is a collection of merge requests to a set of projects.  The denominator is a collection of people. Both are tracked over time (usually monthly).
 
 MR Rate begins with an `[Identity]` prefix which defines the group of people (the denominator) taken into calculation. This is usually a Division, Department, Sub-Department, or Team name from our [Organizational Structure](/company/team/structure/#organizational-structure). The calculation for MR rate is the number of authored MRs by the team members divided by the number of team members in the group. `~group::*` labels are **not** used to filter the authored MRs. For example:
-* [Engineering MR Rate](/handbook/engineering/performance-indicators/#engineering-mr-rate)
-* [Development Department MR Rate](/handbook/engineering/development/performance-indicators/#mr-rate)
+
+* [Development Department MR Rate](/handbook/engineering/development/performance-indicators/#development-department-mr-rate)
 
 Previously MR Rate was called "Narrow MR Rate," but [that term was removed](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/78269).
 
