Remove reference to Ally in Quality handbook

--- a/quality/quality-engineering/dev-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/dev-qe-team/index.html.md.erb
@@ -19,9 +19,10 @@ description: "Quality Engineering team for the Dev Section"
 | **Issue Tracker** | [quality/team-tasks](https://gitlab.com/gitlab-org/quality/team-tasks/issues/) |
 
 Engineers in this Sub-Department are embedded in the [Dev section]
-## Current OKR
 
-<iframe src="https://app.ally.io/public/ToDXbCI5WIIIGoa" class="dashboard-embed" height="900" width="100%" style="border:none;"> </iframe>
+## Current OKR 
+
+Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122353690) of our current Dev Quality Engineering OKR.
 
 ## Team Members
 
@@ -32,7 +33,7 @@ Quality Engineering Manager: Ramya Authappan
 | 1    	| Create    	| [Source Code]            	| Anastasia McDonald                                                    |
 | 2    	| Create    	| [Code Review]            	| Jay McCure                                                           	|
 | 3    	| Create    	| [Editor]                 	| Jason Zhang                                                   	    |
-| 4    	| Manage    	| [Authentication and Authorization]                 	| Sanad Liaquat                                                        	|
+| 4    	| Manage    	| [Authentication and Authorization]                 	| Sanad Liaquat                             |
 | 5    	| Manage    	| [Organization]           	| Valerie Burton                                                        |
 | 6    	| Manage    	| [Import]                 	| Andrejs Cunskis                                                      	|
 | 7    	| Manage    	| [Optimize]               	| TBH                                                                  	|
@@ -41,7 +42,6 @@ Quality Engineering Manager: Ramya Authappan
 | 10   	| Plan      	| [Certify]                	| TBH                                                                  	|
 | 11   	| Manage    	| [Integrations]           	| Sean Gregory 	                                                        |
 | 12   	| Manage 	    | [Foundations]            	| TBH                                                                  	|
-
 
 ## Quality Performance Indicators for Dev Section
 
