--- a/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
@@ -46,17 +46,11 @@ Quality Engineering Manager: Kassandra Svoboda
 
 ## OKRs
 
-Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs, it updates automatically as the quarter progresses.
+Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current quarter OKRs and is updated regularly as the quarter progresses.
 
-### Enablement section
+- [Overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122584615) of our current Enablement Quality Engineering OKR.
+- [Overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122584619) of our current SaaS Platforms Quality Engineering OKR.
 
-#### Current quarter
-
-<iframe src="https://app.ally.io/public/7W1KkROYCD0mg1z" class="dashboard-embed" height="900" width="100%" style="border:none;"> </iframe>
-
-#### Previous quarter
-
-<iframe src="https://app.ally.io/public/mZA4v7tmyqd9jDi" class="dashboard-embed" height="900" width="100%" style="border:none;"> </iframe>
 
 ## Quality Performance Indicators for Enablement Section
 
