--- a/quality/quality-engineering/index.html.md.erb
+++ b/quality/quality-engineering/index.html.md.erb
@@ -79,11 +79,7 @@ Quality Engineering has been key to supporting prospect POVs and providing promp
 
 ## Active Quarter OKRs
 
-<iframe src="https://app.ally.io/public/LXRjSFaQpWM5PDC" class="dashboard-embed" height="1000" width="100%" style="border:none;"> </iframe>
-
-## Previous Quarter OKRs
-
-<iframe src="https://app.ally.io/public/mz3acmJoC4ZhQby" class="dashboard-embed" height="1000" width="100%" style="border:none;"> </iframe>
+Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122330246) of our current Quality Engineering OKR.
 
 ## Team Structure
 
