--- a/quality/quality-engineering/ops-analytics-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/ops-analytics-qe-team/index.html.md.erb
@@ -24,15 +24,9 @@ description: "Quality Engineering team for the Ops & Analytics Sections"
 
 ## OKRs
 
-Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs; it updates automatically as the quarter progresses.
+Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current OKRs and is updated regularly as the quarter progresses.
 
-### Current quarter
-
-<iframe src="https://app.ally.io/public/IsmLqFlzpThYLyY" class="dashboard-embed" height="1000" width="100%" style="border:none;"> </iframe>
-
-### Previous quarter
-
-<iframe src="https://app.ally.io/public/j7YLj7zBxR45BjC" class="dashboard-embed" height="1000" width="100%" style="border:none;"> </iframe>
+Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122584658) of our current Ops and Analytics Quality Engineering OKR.
 
 ## Quality Performance Indicators for the Ops Section
 
