--- a/quality/quality-engineering/sec-data-science-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/sec-data-science-qe-team/index.html.md.erb
@@ -46,13 +46,10 @@ Quality Engineering Manager: Vincy Wilson
 
 ## OKRs
 
-Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs, it updates automatically as the quarter progresses.
+Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current OKRs and is updated regularly as the quarter progresses.
 
-### Sec section
-
-#### Current quarter
-
-<iframe src="https://app.ally.io/public/Zf8uMaVX66K0Ete" class="dashboard-embed" height="700" width="100%" style="border:none;"> </iframe>
+- [Overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122388037) of our current Sec Quality Engineering OKR.
+- [Overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122584430) of our current Data Science Quality Engineering OKR.
 
 ## Quality Performance Indicators for Sec Section
 
