--- a/quality/index.html.md.erb
+++ b/quality/index.html.md.erb
@@ -121,15 +121,9 @@ In FY23 we will be focused on contributor success & customer results while deliv
 
 ## OKRs
 
-Every quarter, the Quality department commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs, it updates automatically as the quarter progresses.
+Objectives and Key Results (OKRs) help align our department towards what really matters. These happen quarterly and are based on [company OKRs](/company/okrs/) and we follow the OKR process defined here(/company/okrs/#how-to-use-gitlab-for-okrs). We check in on the status of our progress routinely throughout the quarter to determine whether we are on track or need to pivot in order to accomplish or change these goals. At the end of the quarter, we do a [final scoring](/company/okrs/#scoring-okrs) which includes a [retrospective](/handbook/engineering/#okr-retrospection) on how the quarter went according to these OKRs. 
 
-### Current quarter
-
-<iframe src="https://app.ally.io/public/LngCHdk3uKSaBuG" class="dashboard-embed" height="1600" width="100%" style="border:none;"> </iframe>
-
-### Previous quarter
-
-<iframe src="https://app.ally.io/public/uKiFyIu7rH6lz7L" class="dashboard-embed" height="1600" width="100%" style="border:none;"> </iframe>
+[Here  a list of current OKRs for our department.](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=created_asc&state=opened&label_name%5B%5D=Department%3A%3AQuality&label_name%5B%5D=Sub-Department%3A%3AQuality%20Engineering&type%5B%5D=objective&milestone_title=FY24-Q1&first_page_size=20)
 
 ## Quality Department structure
 
