--- a/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
@@ -44,15 +44,9 @@ Quality Engineering Manager: Vincy Wilson
 
 ## OKRs 
 
-Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs, it updates automatically as the quarter progresses.
+Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current quarter OKRs and is updated regularly as the quarter progresses.
 
-### Current quarter
-
-<iframe src="https://app.ally.io/public/rUTVl31bBNLfkVt" class="dashboard-embed" height="900" width="100%" style="border:none;"> </iframe>
-
-### Previous quarter
-
-<iframe src="https://app.ally.io/public/epX0rB3Ow8tAmcO" class="dashboard-embed" height="900" width="100%" style="border:none;"> </iframe>
+Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122452252) of our current Fulfillment Quality Engineering OKR.
 
 ## Quality Performance Indicators for Fulfillment Section
 
