Added description of spikes for project management

--- a/development/dev/plan-project-management/index.html.md.erb
+++ b/development/dev/plan-project-management/index.html.md.erb
@@ -66,9 +66,24 @@ For more urgent items, feel free to use [#s_plan] on Slack.
 
 <%= partial("handbook/engineering/development/dev/plan/weighing_bugs") %>
 
-#### Planning Rotation
+#### Spikes
 
-We are revisiting the way we do planning rotations.
+There is a decent amount of complexity in the features that we as a team are responsible for, and we're aiming to determine where the majority of risks involved in building a feature are prior to commitments being made and development starting. We are trying out a concept of a rotation of DRIs for spikes. Spikes will be a two week time period where one engineer DRI works exclusively on breaking down an issue/epic by asking questions to determine risk and complexity, creating proof of concepts, and writing up iteration plans for implementation.
+
+The DRI will not be expected to produce MRs during the period they are on rotation, but instead, will be expected to produce issue artifacts at the end of the period, so that a first iteration can be worked on in the following milestone (either by the DRI or other engineers).
+
+By the end of the spike, there should be documented acceptance criteria for a first iteration, that the internal parties (spike DRI, PM, UX, and EM) have all agreed to.
+
+DRI rotation:
+
+| DRI | Start date | End date | Spike |
+| --- | --- | --- | --- |
+| Alexandru Croitor | 2023-01-23 | 2023-02-03 | [Moving work items](https://gitlab.com/gitlab-org/gitlab/-/issues/387304) |
+| Simon Knox | 2023-02-06 | 2023-02-17 | |
+| Heinrich Lee Yu | 2023-02-20 | 2023-03-03 | |
+| Coung Ngo | 2023-03-06 | 2023-03-17 | |
+| Mario Celi | 2023-03-20 | 2023-03-31 | |
+
 
 #### Historical Capacity
 
