Observability Team page

--- a/infrastructure/team/reliability/index.html.md.erb
+++ b/infrastructure/team/reliability/index.html.md.erb
@@ -69,15 +69,11 @@ We maintain a single source of truth epic for all work underway for the Reliabil
 
 The General Team supports the Reliability Team's [overall vision](/handbook/engineering/infrastructure/team/reliability/#vision) by supporting services for GitLab.com that do not fit the mission of the other [Reliability Teams](/handbook/engineering/infrastructure/team/reliability/#reliability-teams). See the [dedicated General Team Page](/handbook/engineering/infrastructure/team/reliability/general.html) for more details. 
 
-##### Observability Squad
+##### [Observability Team](handbook/engineering/infrastructure/team/reliability/observability.html) 
 
- * Build, maintain, and improve observability services.
- * Provide long term improvements to observability services.
- * Services: Prometheus, Thanos, Grafana, [Logging](https://gitlab.com/gitlab-com/runbooks/-/tree/master/docs/logging) 
- * Examples:
-    * [Prometheus Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3APrometheus)
-    * [Thanos Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?sort=updated_desc&state=opened&label_name%5B%5D=Service%3A%3AThanos&first_page_size=100)
-    * [Elastic Search Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3AElasticsearch)
+The Observability team maintains metrics and logs platforms for GitLab SaaS.
+* Services: Prometheus, Thanos, Grafana, [Logging](https://gitlab.com/gitlab-com/runbooks/-/tree/master/docs/logging) 
+
 
 ##### Reliability Foundations Team
   * Build, Run and Own the core infrastructure for GitLab.com.
