Update Ally links with OKR project

--- a/development/dev/manage/index.html.md.erb
+++ b/development/dev/manage/index.html.md.erb
@@ -30,7 +30,7 @@ In GitLab issues, questions should start by @ mentioning the relevant Product Ma
 
 ## OKRs
 
-<iframe src="https://app.ally.io/public/s30Hi13kRnJD3qF" class="dashboard-embed" height="1050" width="100%" style="border:none;"></iframe>
+For a list of active OKRs, [check the OKR project](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=created_date&state=opened&label_name%5B%5D=devops%3A%3Amanage&milestone_title=Started&first_page_size=50).
 
 ## Hiring
 
