--- a/development/dev/manage/integrations/index.html.md.erb
+++ b/development/dev/manage/integrations/index.html.md.erb
@@ -44,11 +44,8 @@ For more urgent items, feel free to use the Slack Channel (internal): [#g_manage
 Each quarter we have a series of Objectives and Key Results (OKRs) for our
 group. To find the current OKRs for this
 [quarter](https://about.gitlab.com/handbook/finance/#fiscal-year), check the
-[Integrations Ally page](https://app.ally.io/teams/44487/objectives?tab=0&time_period_id=135093&viewId=330300).
+[OKR project](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aintegrations&milestone_title=Started&first_page_size=50).
 
-### Active Quarter OKRs
-
-<iframe src="https://app.ally.io/public/PGCaISxZpEhuNEg" class="dashboard-embed" height="1050" width="100%" style="border:none;"></iframe>
 
 ## Metrics
 
